updated the Security Settings

--- a/src/PAGES/loginpage.html
+++ b/src/PAGES/loginpage.html
@@ -31,7 +31,7 @@
                 <h1>Admin Login</h1>
                 <span>Login with your credentials</span>
                 <div class="input-group">
-                    <input type="email" id="adminEmail" placeholder="Enter email" required />
+                    <input type="text" id="adminEmailOrusername" placeholder="Enter email or username" required />
                 </div>
                 <div class="input-group">
                     <input type="password" id="adminPassword" placeholder=" Enter password" required />
