--- a/src/PAGES/Dashboard.html
+++ b/src/PAGES/Dashboard.html
@@ -39,7 +39,7 @@
 				<span class="material-icons">account_circle</span>
 				<div class="profile-dropdown">
 					<a href="#"><span class="material-icons">account_circle</span> Profile</a>
-					<a href="#"><span class="material-icons">settings</span> Settings</a>
+					<a href="settings.html"><span class="material-icons">settings</span> Settings</a>
 					<a href="loginpage.html"><span class="material-icons">logout</span> Logout</a>
 				</div>
 			</div>
