--- a/src/PAGES/studentform.html
+++ b/src/PAGES/studentform.html
@@ -171,6 +171,16 @@
                                 </select>
                                 <span class="error" id="batchCodeError"></span>
                             </div>
+                            <div class="form-group">
+                                <label for="Status">Status*</label>
+                                <select id="Status" name="Status" required>
+                                    <option value="">Select Status</option>
+                                    <option value="On Going">On Going</option>
+                                    <option value="Completed">Completed</option>
+                                    <option value="Up Coming">Up Coming</option>
+                                </select>
+                                <span class="error" id="campus"></span>
+                            </div>
                         </div>
                     </div>
 
