--- a/src/PAGES/addbatch.html
+++ b/src/PAGES/addbatch.html
@@ -39,7 +39,7 @@
 				<span class="material-icons">account_circle</span>
 				<div class="profile-dropdown">
 					<a href="#"><span class="material-icons">account_circle</span> Profile</a>
-					<a href="#"><span class="material-icons">settings</span> Settings</a>
+					<a href="settings.html"><span class="material-icons">settings</span> Settings</a>
 					<a href="loginpage.html"><span class="material-icons">logout</span> Logout</a>
 				</div>
 			</div>
@@ -60,14 +60,14 @@
 		</div>
 
 		<div class="dropdown-menu courses-menu">
-            <a><span class="material-icons">menu_book</span> Courses</a>
-            <span class="material-icons toggle-icon courses-toggle">expand_more</span>
-        </div>
-        <div class="submenu courses-submenu">
-            <a href="addcourses.html">
-                <span class="material-icons">playlist_add</span> Courses Add & View
-            </a>
-        </div>
+			<a><span class="material-icons">menu_book</span> Courses</a>
+			<span class="material-icons toggle-icon courses-toggle">expand_more</span>
+		</div>
+		<div class="submenu courses-submenu">
+			<a href="addcourses.html">
+				<span class="material-icons">playlist_add</span> Courses Add & View
+			</a>
+		</div>
 
 		<div class="dropdown-menu Batches-menu">
 			<a href="#"><span class="material-icons">library_books</span> Batches</a>
@@ -114,7 +114,7 @@
 
 		<a href="#"><span class="material-icons">analytics</span> Analytics</a>
 		<a href="#"><span class="material-icons">notifications</span> Notifications</a>
-		<a href="#"><span class="material-icons">settings</span> Settings</a>
+		<a href="settings.html"><span class="material-icons">settings</span> Settings</a>
 	</nav>
 
 	<!-- Main Content -->
