--- a/src/PAGES/certificate.html
+++ b/src/PAGES/certificate.html
@@ -39,7 +39,7 @@
 				<span class="material-icons">account_circle</span>
 				<div class="profile-dropdown">
 					<a href="#"><span class="material-icons">account_circle</span> Profile</a>
-					<a href="#"><span class="material-icons">settings</span> Settings</a>
+					<a href="settings.html"><span class="material-icons">settings</span> Settings</a>
 					<a href="loginpage.html"><span class="material-icons">logout</span> Logout</a>
 				</div>
 			</div>
@@ -115,7 +115,7 @@
 
         <a href="#"><span class="material-icons">analytics</span> Analytics</a>
         <a href="#"><span class="material-icons">notifications</span> Notifications</a>
-        <a href="#"><span class="material-icons">settings</span> Settings</a>
+        <a href="settings.html"><span class="material-icons">settings</span> Settings</a>
     </nav>
 
     <!-- Main Content -->
