--- a/src/PAGES/studentform.html
+++ b/src/PAGES/studentform.html
@@ -15,36 +15,36 @@
 <body>
 
     <!-- Header -->
-	<header class="header">
-		<!-- Left: Logo -->
-		<div class="logo">
-			<img src="../img/Medhalogo.png" alt="Medhalogo">
-		</div>
+    <header class="header">
+        <!-- Left: Logo -->
+        <div class="logo">
+            <img src="../img/Medhalogo.png" alt="Medhalogo">
+        </div>
 
-		<!-- Right: Menu, Notifications, Profile -->
-		<div class="right-section">
-			<span class="menu-icon material-icons">menu</span>
+        <!-- Right: Menu, Notifications, Profile -->
+        <div class="right-section">
+            <span class="menu-icon material-icons">menu</span>
 
-			<!-- Notification Icon -->
-			<div class="notification-icon">
-				<span class="material-icons">notifications</span>
-				<span class="badge">3</span> <!-- Badge for new notifications -->
-				<div class="notification-dropdown">
-					<p>No new notifications</p>
-				</div>
-			</div>
+            <!-- Notification Icon -->
+            <div class="notification-icon">
+                <span class="material-icons">notifications</span>
+                <span class="badge">3</span> <!-- Badge for new notifications -->
+                <div class="notification-dropdown">
+                    <p>No new notifications</p>
+                </div>
+            </div>
 
-			<!-- Profile Icon -->
-			<div class="profile-icon">
-				<span class="material-icons">account_circle</span>
-				<div class="profile-dropdown">
-					<a href="#"><span class="material-icons">account_circle</span> Profile</a>
-					<a href="#"><span class="material-icons">settings</span> Settings</a>
-					<a href="loginpage.html"><span class="material-icons">logout</span> Logout</a>
-				</div>
-			</div>
-		</div>
-	</header>
+            <!-- Profile Icon -->
+            <div class="profile-icon">
+                <span class="material-icons">account_circle</span>
+                <div class="profile-dropdown">
+                    <a href="#"><span class="material-icons">account_circle</span> Profile</a>
+                    <a href="settings.html"><span class="material-icons">settings</span> Settings</a>
+                    <a href="loginpage.html"><span class="material-icons">logout</span> Logout</a>
+                </div>
+            </div>
+        </div>
+    </header>
 
     <!-- Sidebar Navigation -->
     <nav class="sidebar">
@@ -114,7 +114,7 @@
 
         <a href="#"><span class="material-icons">analytics</span> Analytics</a>
         <a href="#"><span class="material-icons">notifications</span> Notifications</a>
-        <a href="#"><span class="material-icons">settings</span> Settings</a>
+        <a href="settings.html"><span class="material-icons">settings</span> Settings</a>
     </nav>
 
     <!-- Main Content -->
