--- a/src/PAGES/viewstudent.html
+++ b/src/PAGES/viewstudent.html
@@ -39,7 +39,7 @@
 				<span class="material-icons">account_circle</span>
 				<div class="profile-dropdown">
 					<a href="#"><span class="material-icons">account_circle</span> Profile</a>
-					<a href="#"><span class="material-icons">settings</span> Settings</a>
+					<a href="settings.html"><span class="material-icons">settings</span> Settings</a>
 					<a href="loginpage.html"><span class="material-icons">logout</span> Logout</a>
 				</div>
 			</div>
@@ -114,7 +114,7 @@
 
 		<a href="#"><span class="material-icons">analytics</span> Analytics</a>
 		<a href="#"><span class="material-icons">notifications</span> Notifications</a>
-		<a href="#"><span class="material-icons">settings</span> Settings</a>
+		<a href="settings.html"><span class="material-icons">settings</span> Settings</a>
 	</nav>
 
 	<!-- Main Content -->
@@ -130,7 +130,7 @@
 						<option value="">Select Status</option>
 					</select>
 				</div>
-			
+
 				<!-- Batch Code Dropdown -->
 				<div>
 					<label>Select Batch Code:</label>
@@ -139,7 +139,7 @@
 					</select>
 				</div>
 			</div>
-			
+
 
 			<table style="font-size: 12px;">
 				<thead>
