--- a/src/PAGES/loginpage.html
+++ b/src/PAGES/loginpage.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MedhaXL Login</title>
     <link rel="stylesheet" href="../CSS/loginpagge.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -14,18 +15,20 @@
     </div>
     <div class="container" id="container">
         <div class="form-container sign-up-container">
-            <form action="#">
+            <form id="studentLoginForm">
                 <h1>Student Login</h1>
                 <span>Login with your credentials</span>
                 <div class="input-group">
-                    <input type="email" placeholder="Email" required />
+                    <input type="text" id="studentEmailOrCanID" placeholder="Enter CAN-ID or Email" required />
                 </div>
                 <div class="input-group">
-                    <input type="password" placeholder="Password" required />
+                    <input type="password" id="studentPassword" placeholder="Enter password" required />
                 </div>
                 <button type="submit">Sign in</button>
             </form>
         </div>
+
+
         <div class="form-container sign-in-container">
             <form id="adminLoginForm">
                 <h1>Admin Login</h1>
