updated the batch status

--- a/src/PAGES/addbatch.html
+++ b/src/PAGES/addbatch.html
@@ -140,8 +140,9 @@
 				<label>Status</label>
 				<select id="Status" required>
 					<option value="">Select Status</option>
-					<option value="Active">Active</option>
-					<option value="Inactive">Inactive</option>
+					<option value="ON Going">ON Going</option>
+					<option value="Completed">Completed</option>
+					<option value="Up Coming">Up Coming</option>
 				</select>
 
 				<button type="submit">Add Batch</button>
