--- a/src/PAGES/updateBatchStatus.html
+++ b/src/PAGES/updateBatchStatus.html
@@ -124,9 +124,9 @@
 
             <label for="statusFilter">Filter Batches:</label>
             <select id="statusFilter">
-                <option value="Active">Active</option>
-                <option value="Inactive">Inactive</option>
-                <option value="All">All</option>
+                <option value="ON Going">ON Going</option>
+                <option value="Completed">Completed</option>
+                <option value="Up Coming">Up Coming</option>
             </select>
 
             <table>
