fixed the session token expire

--- a/src/PAGES/Dashboard.html
+++ b/src/PAGES/Dashboard.html
@@ -59,6 +59,7 @@
 		<div class="submenu students-submenu">
 			<a href="studentform.html"><span class="material-icons">group_add</span> Add Student</a>
 			<a href="viewstudent.html"><span class="material-icons">visibility</span> View Students</a>
+			<a href="studentlogindata.html"><span class="material-icons">lock</span> Student Login</a>
 		</div>
 
 		<div class="dropdown-menu courses-menu">
