--- a/src/PAGES/batchpayments.html
+++ b/src/PAGES/batchpayments.html
@@ -57,6 +57,7 @@
         <div class="submenu students-submenu">
             <a href="studentform.html"><span class="material-icons">group_add</span> Add Student</a>
             <a href="viewstudent.html"><span class="material-icons">visibility</span> View Students</a>
+            <a href="studentlogindata.html"><span class="material-icons">lock</span> Student Login</a>
         </div>
 
         <div class="dropdown-menu courses-menu">
@@ -157,7 +158,7 @@
                     <th>Phone</th>
                     <th>Course Fee</th>
                     <th>Discount Applied</th>
-                    <th>Total Fee</th>
+                    <th>Fee(Paid)</th>
                     <th>Pay</th>
                     <th>Total Due</th>
                     <th>Action</th>
