--- a/src/PAGES/studentdashboard.html
+++ b/src/PAGES/studentdashboard.html
@@ -4,72 +4,160 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Dashboard</title>
+    <title>Student Dashboard - MedhaXL</title>
     <link rel="stylesheet" href="../CSS/studentdashboard.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://unpkg.com/lucide@latest"></script>
 </head>
 
 <body>
-
-    <!-- Top Navigation Bar -->
-    <header>
-        <h2>MedhaXL Student Dashboard</h2>
-        <div class="profile-container">
-            <div class="profile" onclick="toggleProfileMenu()">
-                <span id="studentName">loading..</span>
-                <i class="material-icons">account_circle</i>
+    <div class="dashboard">
+        <!-- Sidebar -->
+        <aside class="sidebar" id="sidebar">
+            <div class="logo">
+                <img src="../img/logo1.png" alt="Medhalogo">
             </div>
-            <button id="logoutBtn" class="hidden">Logout</button>
+
+            <nav class="nav-menu">
+                <a href="#" class="nav-item active">
+                    <i class="material-icons">home</i>
+                    <span>Home</span>
+                </a>
+                <a href="#" class="nav-item">
+                    <i class="material-icons">book</i>
+                    <span>My Courses</span>
+                </a>
+                <a href="#" class="nav-item">
+                    <i class="material-icons">assignment</i>
+                    <span>Assignments</span>
+                </a>
+                <a href="#" class="nav-item">
+                    <i class="material-icons">emoji_events</i>
+                    <span>Certificates</span>
+                </a>
+                <a href="#" class="nav-item">
+                    <i class="material-icons">help</i>
+                    <span>Support</span>
+                </a>
+            </nav>
+        </aside>
+
+        <!-- Main Content -->
+        <div class="main-content">
+            <!-- Header -->
+            <header class="header">
+                <button id="sidebar-toggle" class="menu-toggle">
+                    <i class="material-icons">menu</i>
+                </button>
+
+                <div class="user-menu">
+                    <span>Welcome, Bhaskar Rao</span>
+                    <div class="profile-dropdown">
+                        <button id="profile-toggle">
+                            <i class="material-icons">person</i>
+                        </button>
+                        <div class="dropdown-menu" id="profile-menu">
+                            <a href="#"> <i class="material-icons">edit</i>
+                                <span>Edit Profile</span></a>
+                            <a href="#" class="logout">
+                                <i class="material-icons">logout</i>
+                                <span>Logout</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </header>
+
+            <!-- Dashboard Content -->
+            <main class="content">
+                <div class="dashboard-cards">
+                    <div class="card blue">
+                        <div>
+                            <p>Enrolled Courses</p>
+                            <h3>1</h3>
+                        </div>
+                        <i class="material-icons">book</i>
+                    </div>
+                    <div class="card green">
+                        <div>
+                            <p>Total Fees</p>
+                            <h3>₹15,000</h3>
+                        </div>
+                        <i class="material-icons">assignment</i>
+                    </div>
+                    <div class="card purple">
+                        <div>
+                            <p>Paid Fees</p>
+                            <h3>₹3,000</h3>
+                        </div>
+                        <i class="material-icons">emoji_events</i>
+                    </div>
+                    <div class="card red">
+                        <div>
+                            <p>Due Amount</p>
+                            <h3>₹12,000</h3>
+                        </div>
+                        <i class="material-icons">help</i>
+                    </div>
+                </div>
+
+                <!-- Recent Courses -->
+                <div class="recent-courses">
+                    <h2>Recent Courses</h2>
+                    <div class="courses-grid">
+                        <div class="course-card">
+                            <img src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=800&auto=format&fit=crop&q=60"
+                                alt="Course thumbnail">
+                            <div class="course-content">
+                                <h3>Web Development Course 1</h3>
+                                <p>Learn the fundamentals of web development</p>
+                                <div class="progress">
+                                    <span>Progress: 60%</span>
+                                    <div class="progress-bar">
+                                        <div class="progress-fill"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="course-card">
+                            <img src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=800&auto=format&fit=crop&q=60"
+                                alt="Course thumbnail">
+                            <div class="course-content">
+                                <h3>Web Development Course 2</h3>
+                                <p>Learn the fundamentals of web development</p>
+                                <div class="progress">
+                                    <span>Progress: 60%</span>
+                                    <div class="progress-bar">
+                                        <div class="progress-fill"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="course-card">
+                            <img src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=800&auto=format&fit=crop&q=60"
+                                alt="Course thumbnail">
+                            <div class="course-content">
+                                <h3>Web Development Course 3</h3>
+                                <p>Learn the fundamentals of web development</p>
+                                <div class="progress">
+                                    <span>Progress: 60%</span>
+                                    <div class="progress-bar">
+                                        <div class="progress-fill"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </main>
+
+            <!-- Footer -->
+            <footer class="footer">
+                © 2025 MedhaXL. All Rights Reserved.
+            </footer>
         </div>
-
-        <!-- Hamburger Menu (Only on Mobile) -->
-        <button class="menu-btn" onclick="toggleSidebar()">
-            <i class="material-icons">menu</i>
-        </button>
-    </header>
-
-    <!-- Sidebar Navigation -->
-    <aside id="sidebar">
-        <ul>
-            <li class="active"><i class="material-icons">dashboard</i> Dashboard</li>
-            <li><i class="material-icons">book</i> My Courses</li>
-            <li><i class="material-icons">assignment</i> Attendance</li>
-            <li><i class="material-icons">payment</i> Fees</li>
-            <li><i class="material-icons">emoji_events</i> Certificates</li>
-            <li><i class="material-icons">support</i> Support</li>
-        </ul>
-    </aside>
-
-    <!-- Main Content -->
-    <main>
-        <div class="dashboard-widgets">
-            <div class="card">
-                <i class="material-icons">book</i>
-                <h3>Enrolled Course</h3>
-                <p id="courseName">Loading...</p>
-            </div>
-            <div class="card">
-                <i class="material-icons">attach_money</i>
-                <h3>Total Fees</h3>
-                <p>₹<span id="totalFees">0</span></p>
-            </div>
-            <div class="card">
-                <i class="material-icons">payment</i>
-                <h3>Paid Fees</h3>
-                <p>₹<span id="feesPaid">0</span></p>
-            </div>
-            <div class="card">
-                <i class="material-icons">account_balance_wallet</i>
-                <h3>Due Amount</h3>
-                <p>₹<span id="dueAmount">0</span></p>
-            </div>
-        </div>
-    </main>
-
-    <!-- Footer -->
-    <footer>
-        <p>© 2025 MedhaXL. All Rights Reserved.</p>
-    </footer>
+    </div>
 
     <script src="../JS/studentdashboard.js"></script>
 </body>
