chanes done for the student login

--- a/src/PAGES/studentdashboard.html
+++ b/src/PAGES/studentdashboard.html
@@ -52,7 +52,7 @@
                 </button>
 
                 <div class="user-menu">
-                    <span>Welcome, Bhaskar Rao</span>
+                    <span id="welcome-name">Welcome, </span>
                     <div class="profile-dropdown">
                         <button id="profile-toggle">
                             <i class="material-icons">person</i>
@@ -60,7 +60,7 @@
                         <div class="dropdown-menu" id="profile-menu">
                             <a href="#"> <i class="material-icons">edit</i>
                                 <span>Edit Profile</span></a>
-                            <a href="#" class="logout">
+                            <a href="loginpage.html" class="logout">
                                 <i class="material-icons">logout</i>
                                 <span>Logout</span>
                             </a>
