chanes done for the studentdashbaod course name

--- a/src/PAGES/studentdashboard.html
+++ b/src/PAGES/studentdashboard.html
@@ -75,7 +75,7 @@
                     <div class="card blue">
                         <div>
                             <p>Enrolled Courses</p>
-                            <h3>1</h3>
+                            <h3 id="enrolled-course">Loading...</h3>
                         </div>
                         <i class="material-icons">book</i>
                     </div>
