chanes done for the studentdashbaod cards

--- a/src/PAGES/studentdashboard.html
+++ b/src/PAGES/studentdashboard.html
@@ -81,22 +81,22 @@
                     </div>
                     <div class="card green">
                         <div>
-                            <p>Total Fees</p>
-                            <h3>₹15,000</h3>
+                            <p>Total Fee</p>
+                            <h3 id="totalfee">₹--</h3>                            
                         </div>
                         <i class="material-icons">assignment</i>
                     </div>
                     <div class="card purple">
                         <div>
                             <p>Paid Fees</p>
-                            <h3>₹3,000</h3>
+                            <h3 id="feepaid">₹--</h3>
                         </div>
                         <i class="material-icons">emoji_events</i>
                     </div>
                     <div class="card red">
                         <div>
                             <p>Due Amount</p>
-                            <h3>₹12,000</h3>
+                            <h3 id="due-amount">₹--</h3>
                         </div>
                         <i class="material-icons">help</i>
                     </div>
