--- a/src/PAGES/studentform.html
+++ b/src/PAGES/studentform.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard</title>
+    <title>Student Form</title>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="../CSS/studentform.css">
@@ -490,8 +490,9 @@
                     <!-- Preview content will be inserted here -->
                 </div>
                 <div class="modal-footer">
-                    <button onclick="closePreview()" class="btn-secondary">Edit</button>
                     <button onclick="confirmSubmission()" class="btn-primary">Submit Registration</button>
+                    <button onclick="closePreview()" class="btn-secondary">Edit</button>
+                
                 </div>
             </div>
         </div>
