--- a/src/PAGES/studentdashboard.html
+++ b/src/PAGES/studentdashboard.html
@@ -20,7 +20,7 @@
             </div>
 
             <nav class="nav-menu">
-                <a href="#" class="nav-item active">
+                <a href="studentdashboard.html" class="nav-item">
                     <i class="material-icons">home</i>
                     <span>Home</span>
                 </a>
@@ -32,7 +32,7 @@
                     <i class="material-icons">assignment</i>
                     <span>Assignments</span>
                 </a>
-                <a href="#" class="nav-item">
+                <a href="studentcertificate.html" class="nav-item">
                     <i class="material-icons">emoji_events</i>
                     <span>Certificates</span>
                 </a>
@@ -42,6 +42,7 @@
                 </a>
             </nav>
         </aside>
+
 
         <!-- Main Content -->
         <div class="main-content">
