updates the code student Course Type

--- a/src/PAGES/studentform.html
+++ b/src/PAGES/studentform.html
@@ -182,6 +182,16 @@
                                 </select>
                                 <span class="error" id="campus"></span>
                             </div>
+                            <div class="form-group">
+                                <label for="CourseType">Course Type*</label>
+                                <select id="CourseType" name="CourseType" required>
+                                    <option value="">Select Type</option>
+                                    <option value="Regular">Regular</option>
+                                    <option value="Internship">Internship</option>
+                                    <option value="Corporate Program">Corporate Program</option>
+                                </select>
+                                <span class="error" id="CourseType"></span>
+                            </div>
                         </div>
                     </div>
 
