--- a/src/PAGES/viewstudent.html
+++ b/src/PAGES/viewstudent.html
@@ -124,6 +124,15 @@
 			<h1>Search Batch</h1>
 
 			<div class="form-container">
+
+				<!-- Course Type Dropdown -->
+				<div>
+					<label>Select Course Type:</label>
+					<select id="CourseType" onchange="loadStatuses()">
+						<option value="">Select Course Type</option>
+					</select>
+				</div>
+
 				<!-- Status Dropdown -->
 				<div>
 					<label>Select Status:</label>
