updates the code studentController.js

--- a/src/PAGES/Dashboard.html
+++ b/src/PAGES/Dashboard.html
@@ -138,11 +138,12 @@
 						<select id="BatchStatus" onchange="loadBatchCodes()">
 							<option value="">Select Status</option>
 						</select>
+					
 						<label for="batchCode">Select Batch:</label>
 						<select id="batchCodeDropdown">
-							<option value="">Select batch</option>
+							<option value="">Select Batch</option>
 						</select>
-					</li>
+					</li>					
 
 					<li>
 						<button onclick="viewStudents()">View</button>
